--- a/11-MY451_A.rmd
+++ b/11-MY451_A.rmd
@@ -1494,10 +1494,10 @@ analyses you have learned during the course.
 As an optional exercise, the data file **ESS5GB\_trust.sav** is
 provided. This contains a selection of variables from the survey of
 British respondents that forms the 2010 wave of the European Social
-Survey.^[ESS Round 5: European Social Survey Round 5 Data (2010). Data
-file edition 2.0. Norwegian Social Science Data Services, Norway -
-Data Archive and distributor of ESS data. The full data can be
-obtained from <http://ess.nsd.uib.no/ess/round5/>.]
+Survey.^[ESS Round 5: European Social Survey Round 5 Data (2010). Data file
+edition 2.0. Norwegian Social Science Data Services, Norway - Data
+Archive and distributor of ESS data. The full data can be obtained
+from <http://ess.nsd.uib.no/ess/round5/>.]
 
 We suggest that you use the data to practise multiple linear regression
 modelling on one or more of the variables capturing people’s levels of
